# hottop-sidecar-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.cmake  partitions.csv  requirements.txt  sdkconfig  sdkconfig.old
.github/workflows/: deploy.yaml  deploy_base.yaml
cdk/: package-lock.json  package.json
cdk/hottopsidecar-pipeline/: app.py  cdk.json
cdk/hottopsidecar-pipeline/hottopsidecar_pipeline/: hottopsidecar_pipeline_stack.py
cdk/hottopsidecar-pipeline/tests/unit/: test_hottopsidecar_pipeline_stack.py
certs/: aws_codesign.crt  aws_codesign.key
ci/: .eslintrc  buildspec.yaml  cdk.json  package-lock.json  package.json
ci/lib/: BuildFWResourcesStack.ts  BuildFWStage.ts  CIStack.ts  FirmwareDeployStack.ts  FirmwareDeployStage.ts  FirmwareResourcesStack.ts  FirmwareStage.ts  GithubActionsAWS.ts  GithubActionsAWSStack.ts  SelfUpdateTopStack.ts  ci-stack.ts  globals.ts
ci/lib/OTA/: FirmwareOtaStack.ts
ci/test/: ci.test.ts
components/esp-input-pwm-duty/src/: input_pwm_duty.cpp  input_pwm_duty.h
components/esp-max31850/: CMakeLists.txt
components/esp-max31850/src/: max31850.h
components/esp-onewire/: CMakeLists.txt
components/esp-onewire/src/: onewire.c
components/esp-ssr-controller/: CMakeLists.txt
components/esp-ssr-controller/src/: ssr_ctrl.cpp  ssr_ctrl.h
components/esp-wave-gen/: CMakeLists.txt  README.md
components/esp-wave-gen/src/: square_wave_gen.cpp  square_wave_gen.h
components/esp32-aws-connector/: README.md
components/esp32-aws-connector/src/: aws_connector.cpp  aws_connector.h
components/esp32-aws-connector/src/common/: events_common.h  nvs.cpp
components/esp32-aws-connector/src/mqtt/port/network_transport/: network_transport_no_tread.c  network_transport_no_tread.h
components/esp32-aws-connector/src/shadow/: shadow_handler.cpp
components/esp32-aws-connector/src/sntp/: sntp_sync.cpp  sntp_sync.h
components/esp32-aws-connector/src/wifi/: wifi_connect.cpp
components/esp32-input-pwm-duty/: README.md
components/esp32-input-pwm-duty/src/: input_pwm_duty.cpp  input_pwm_duty.h
components/esp32-max31850/: LICENSE  README.md
components/esp32-max31850/src/: max31850.cpp  max31850.h
components/esp32-networking/: CMakeLists.txt  Kconfig
components/esp32-networking/certs/: cert_config.txt
components/esp32-networking/src/: esp32_networking.cpp  esp32_networking.h  events_common.h
components/esp32-networking/src/common/: events_common.h  identity.cpp  nvs.h
components/esp32-networking/src/fleet_provisioning/: mqtt_provision.cpp  mqtt_provision.h
components/esp32-networking/src/mqtt/: core_mqtt_agent_manager.c  core_mqtt_agent_manager.h  core_mqtt_agent_manager_config.h  core_mqtt_agent_manager_events.c  identity.cpp  identity.h  mqtt.cpp  mqtt.h  mqtt_client.cpp  mqtt_client.h  mqtt_subscription_manager.cpp  mqtt_subscription_manager.h  pub_sub_manager.c  pub_sub_manager.h  shadow_handler.cpp  shadow_handler.h  subscription_manager.c  subscription_manager.h
components/esp32-networking/src/mqtt/port/network_transport/: network_transport_no_tread.h
components/esp32-networking/src/ota/: mqtt_ota.cpp  mqtt_ota.h
components/esp32-networking/src/shadow/: shadow_handler.cpp  shadow_handler.h
components/esp32-networking/src/sntp/: sntp.cpp  sntp.h
components/esp32-networking/src/wifi/: wifi_connect.cpp  wifi_connect.h
components/esp32-wave-gen/: CMakeLists.txt  README.md
components/esp32-wave-gen/src/: square_wave_gen.cpp
components/ssr_ctrl/: CMakeLists.txt
components/ssr_ctrl/src/: ssr_ctrl.h
main/: CMakeLists.txt  app_config.cpp  app_config.h  app_metrics.cpp  app_metrics.h  balancer.cpp  balancer.h  control_loop.cpp  control_loop.h  device_info.cpp  device_info.h  digital_input.cpp  digital_input.h  events.h  idf_component.yml  input_power_duty.cpp  input_power_duty.h  level_shifter.cpp  level_shifter.h  main.cpp  max31850.cpp  max31850.h  mqtt.cpp  mqtt.h  mqtt_mutual_auth.cpp  mqtt_mutual_auth.h  nvs.cpp  panel_inputs.cpp  panel_inputs.h  pm_control.cpp  pm_control.h  power_duty.h  power_duty_parser.cpp  reset_button.cpp  reset_button.h  rmt_duty_map.h  rmt_duty_map_50hz.cpp  rmt_duty_map_60hz.cpp  sntp.cpp  sntp.h  (+12 more)
onboard/: create_nvram.py
